--- a/pg3-mrinmayi.ipynb
+++ b/pg3-mrinmayi.ipynb
@@ -781,7 +781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The following line of code required almost 30 minutes to run"
+    "#Get the communities"
    ]
   },
   {
